--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "module": "dist/index.esm.js",
   "types": "dist/index.d.js",
   "scripts": {
-    "test": "nyc jasmine",
-    "peers": "add-peers",
+    "test": "jest",
     "build": "rimraf dist && rollup -c rollup.config.js"
   },
   "peerDependencies": {
-    "@themost/query": "2.5.9",
-    "@themost/data": "2.6.43",
-    "sprintf-js": "^1.1.2",
+    "@themost/common": "^2",
+    "@themost/data": "lts",
+    "@themost/query": "lts",
     "async": "^2.6.4",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "pluralize": "^7.0.0",
+    "sprintf-js": "^1.1.2"
   },
   "engines": {
-    "node": ">=8.4.0"
+    "node": ">=12.22.12"
   },
   "repository": {
     "type": "git",
@@ -37,18 +38,20 @@
     "@babel/register": "^7.21.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.0",
+    "@themost/common": "^2.11.0",
+    "@themost/data": "^2.6.79",
     "@themost/peers": "^1.3.1",
-    "@themost/sqlite": "^2.6.15",
-    "@types/jasmine": "^4.3.2",
+    "@themost/query": "^2.6.73",
+    "@themost/sqlite": "^2.9.1",
     "@types/node": "^17.0.23",
+    "cross-spawn": "^7.0.5",
     "dotenv": "^8.2.0",
-    "eslint": "^8.42.0",
-    "jasmine": "^5.0.0",
-    "jasmine-spec-reporter": "^7.0.0",
+    "eslint": "^8.57.1",
+    "jest": "^29.7.0",
     "module-alias": "^2.2.3",
-    "nyc": "^15.1.0",
+    "pluralize": "^7.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^3.23.1",
+    "rollup": "4.22.4",
     "rollup-plugin-dts": "^5.3.0",
     "typescript": "^4.6.3"
   },
